feat: 修复了一些bug，基本上框架已经搭完

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-plus": "^2.1.10",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.13",
+    "pinia-plugin-persist": "^1.0.0",
     "sass": "^1.50.1",
     "ts-md5": "^1.2.11",
     "vue": "^3.2.33",
