--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "echarts": "^5.3.3",
     "element-plus": "^2.1.10",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.13",
@@ -34,9 +35,11 @@
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
     "husky": "^7.0.4",
+    "mockjs": "^1.1.0",
     "prettier": "^2.5.1",
     "typescript": "~4.6.3",
     "vite": "^2.9.5",
+    "vite-plugin-mock": "^2.9.6",
     "vue-tsc": "^0.34.7"
   }
 }
