--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "echarts": "^5.3.3",
+    "echarts-gl": "^2.0.9",
     "element-plus": "^2.1.10",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.13",
