--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "dat.gui": "^0.7.9",
     "echarts": "^5.3.3",
     "echarts-gl": "^2.0.9",
     "element-plus": "^2.1.10",
+    "gsap": "^3.11.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.13",
     "pinia-plugin-persist": "^1.0.0",
     "sass": "^1.50.1",
+    "three": "^0.144.0",
     "ts-md5": "^1.2.11",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14",
@@ -26,8 +29,10 @@
     "@commitlint/cli": "^16.2.4",
     "@commitlint/config-conventional": "^16.2.4",
     "@rushstack/eslint-patch": "^1.1.0",
+    "@types/dat.gui": "^0.7.7",
     "@types/node": "^16.11.27",
     "@types/nprogress": "^0.2.0",
+    "@types/three": "^0.144.0",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vue/eslint-config-prettier": "^7.0.0",
