--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,44 @@
-# Logs
-logs
-*.log
+# # Logs
+# logs
+# *.log
+# npm-debug.log*
+# yarn-debug.log*
+# yarn-error.log*
+# pnpm-debug.log*
+# lerna-debug.log*
+
+# /dist/
+# node_modules/
+# # .DS_Store
+# dist-ssr
+# coverage
+# *.local
+
+# /cypress/videos/
+# /cypress/screenshots/
+
+# # Editor directories and files
+# .vscode/*
+# !.vscode/extensions.json
+# .idea
+# *.suo
+# *.ntvs*
+# *.njsproj
+# *.sln
+# *.sw?
+
+.DS_Store
+node_modules/
+/dist/
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules/
-.DS_Store
-/dist/
-dist-ssr
-coverage
-*.local
-
-/cypress/videos/
-/cypress/screenshots/
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
 .idea
+.vscode
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
